@@ -51,7 +51,7 @@ class TasksController < ApplicationController
     @view = params[:view] || "pending"
     @task = Task.new
     @users = User.except(@current_user).all
-    @bucket = Setting.translate(:task_bucket)[1..-1] << [ "On Specific Date...", :specific_time ]
+    @bucket = Setting.unroll(:task_bucket)[1..-1] << [ "On Specific Date...", :specific_time ]
     @category = Setting.unroll(:task_category)
     if params[:related]
       model, id = params[:related].split("_")
@@ -73,7 +73,7 @@ class TasksController < ApplicationController
     @view = params[:view] || "pending"
     @task = Task.tracked_by(@current_user).find(params[:id])
     @users = User.except(@current_user).all
-    @bucket = Setting.translate(:task_bucket)[1..-1] << [ "On Specific Date...", :specific_time ]
+    @bucket = Setting.unroll(:task_bucket)[1..-1] << [ "On Specific Date...", :specific_time ]
     @category = Setting.unroll(:task_category)
     @asset = @task.asset if @task.asset_id?
     if params[:previous] =~ /(\d+)\z/
