@@ -16,15 +16,15 @@
     %tt
       - if assigned.bucket == "due_asap"
         %span.urgent 
-        == #{t:due_now}.
+        == #{t:task_due_now}.
       - elsif assigned.bucket == "due_later"
-        == #{t:due_later}.
+        == #{t:task_due_later}.
       - elsif assigned.due_at < Date.today
         %span.warn= distance_of_time_in_words(assigned.due_at, Date.today) 
-        == #{t:overdue} #{assigned.due_at.strftime('%b %e')}
+        == #{t:task_overdue} #{assigned.due_at.strftime('%b %e')}
       - elsif assigned.due_at > Date.today
-        == #{t:due_in} #{distance_of_time_in_words(Time.now, assigned.due_at.end_of_day)}
+        == #{t:task_due_in} #{distance_of_time_in_words(Time.now, assigned.due_at.end_of_day)}
       - else
         %span.cool
-        == #{t:due_today}.
+        == #{t:task_due_today}.
       
