@@ -12,7 +12,7 @@
     &ndash;
     %tt
       %span.cool
-        == #{t:completed_small} #{distance_of_time_in_words(completed.completed_at, Time.now)} #{t:ago}
+        == #{t:task_completed} #{distance_of_time_in_words(completed.completed_at, Time.now)} #{t:ago}
         - if completed.completor.id != @current_user.id
           == #{t:by} #{link_to(completed.completor.full_name, user_path(completed.completor))}
         - else
