@@ -19,15 +19,15 @@
     %tt
       - if pending.bucket == "due_asap"
         %span.urgent
-        == #{t:due_now}.
+        == #{t:task_due_now}.
       - elsif pending.bucket == "due_later"
-        == #{t:due_later}.
+        == #{t:task_due_later}.
       - elsif pending.due_at < Date.today
         %span.warn= distance_of_time_in_words(pending.due_at, Date.today)
-        == #{t:overdue} #{pending.due_at.strftime('%b %e')}
+        == #{t:task_overdue} #{pending.due_at.strftime('%b %e')}
       - elsif pending.due_at > Date.today
-        == #{t:due_in} #{distance_of_time_in_words(Time.now, pending.due_at.end_of_day)}
+        == #{t:task_due_in} #{distance_of_time_in_words(Time.now, pending.due_at.end_of_day)}
       - else
         %span.cool
-        == #{t:due_today}.
+        == #{t:task_due_today}.
       
