@@ -1,13 +1,13 @@
 .filters#filters
   = render :partial => "selector"
   - if @view == "pending" || @view == "assigned"
-    - Setting.task_bucket.each do |value, key|
+    - Setting.unroll(:task_bucket).each do |value, key|
       .check_box{:style => "border-bottom: 1px silver dotted;"}
         %div{:style => "float:right;"}
           = @task_total[key]
         = task_filter_checbox(@view, key, @task_total[key]) << " " << t(value)
   - else # @view == "completed"
-    - Setting.task_completed.each do |value, key|
+    - Setting.unroll(:task_completed).each do |value, key|
       .check_box{:style => "border-bottom: 1px silver dotted;"}
         %div{:style => "float:right;"}
           = @task_total[key]
