@@ -4,6 +4,11 @@ It does not matter how slowly you go as long as you do not stop.
 First they ignore you, then they laugh at you, then they fight you,
 then you win. –- Mahatma Gandhi
 
+Thu, Nov 12, 2009
+---------------------------------------------------------------------
+- Restructured settings to take advantage of locale.
+- NOTE: re-run crm:settings:load
+
 Wed, Nov 11, 2009
 ---------------------------------------------------------------------
 - Moved hardcoded setting values from config/settings.yml to locale.
